<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_clapperboard_2"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/navigation_TvShow"
        android:icon="@drawable/ic_television"
        android:title="@string/title_TvShow" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorite" />

</menu>